<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/theme_background_secondary"
    >

    <EditText
        android:id="@+id/fragment_add_verse_address_et"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:hint="@string/hint_add_verse_address"
        android:textColorHint="@color/theme_text_secondary"
        android:background="@color/theme_background"
        />

    <EditText
        android:id="@+id/fragment_add_verse_content_et"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:padding="10dp"
        android:gravity="start"
        android:layout_below="@+id/fragment_add_verse_address_et"
        android:layout_above="@+id/fragment_add_verse_bt"
        android:hint="@string/hint_add_verse_content"
        android:textColorHint="@color/theme_text_secondary"
        android:background="@color/theme_background"
        />

    <Button
        android:id="@+id/fragment_add_verse_bt"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:layout_centerHorizontal="true"
        android:text="@string/confirm"
        android:textSize="16sp"
        android:background="@color/theme_primary"
        />

</RelativeLayout>
