<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/theme_background"
              android:orientation="vertical"
    >

    <ImageView
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_launcher"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        >

        <TextView
            android:id="@+id/about_app_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textColor="@color/theme_text_secondary"
            android:textSize="32sp"
            />

        <TextView
            android:id="@+id/about_v_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/about_app_name_tv"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="3dp"
            android:layout_alignBottom="@id/about_app_name_tv"
            android:text="v"
            android:textColor="@color/theme_text_secondary"
            android:textSize="16sp"
            />

        <TextView
            android:layout_toRightOf="@id/about_v_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_alignBottom="@id/about_app_name_tv"
            android:text="@string/app_version"
            android:textColor="@color/theme_text_secondary"
            android:textSize="16sp"
            />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_author"
            android:textColor="@color/theme_text_secondary"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/author_email"
            android:textColor="@color/theme_text_secondary"
            android:textSize="16sp"
            />

        </LinearLayout>

</LinearLayout>
